--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -1,19 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
-        <variable name="pos" type="int" />
-
-        <variable name="viewModel" type="com.doublesp.coherence.viewmodels.Idea" />
+        <variable
+                name="pos"
+                type="int"/>
+        <variable
+                name="handler"
+                type="com.doublesp.coherence.interfaces.presentation.ListFragmentActionHandlerInterface"/>
+        <variable
+                name="viewModel"
+                type="com.doublesp.coherence.viewmodels.Idea"/>
     </data>
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <LinearLayout
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:background="@drawable/ic_card_background"
+            android:layout_margin="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="5">
 
-        <TextView android:id="@+id/tvIdea" android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_list_composition_idea_height"
-            android:gravity="center" android:maxLines="1" android:text='@{viewModel.content}'
-            android:textColor="@color/colorPrimary" />
+        <TextView
+                android:id="@+id/tvIdea"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/activity_list_composition_idea_height"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:maxLines="1"
+                tools:text="egg"
+                android:text='@{viewModel.content}'
+                android:textColor="@color/colorText"
+                app:crossout='@{viewModel.crossedOut}'
+                />
+
+        <ImageButton
+                android:id="@+id/btnCrossoutIdea"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/activity_list_composition_idea_height"
+                android:layout_weight="1"
+                android:src="@drawable/ic_format_strikethrough"
+                android:tint="@color/colorButton"
+                android:background="@color/colorSecondaryAccent"
+                android:onClick="@{() -> handler.onCrossoutButtonClick(pos)}"
+                />
+
+        <ImageButton
+                android:id="@+id/btnDeleteIdea"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/activity_list_composition_idea_height"
+                android:layout_weight="1"
+                android:src="@drawable/ic_delete"
+                android:tint="@color/colorButton"
+                android:background="@color/colorPrimaryDark"
+                android:onClick="@{() -> handler.onRemoveButtonClick(pos)}"
+                />
     </LinearLayout>
 </layout>
