--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4E342E</color>
-    <color name="colorPrimaryDark">#BDBDBD</color>
-    <color name="colorAccent">#FF1744</color>
-    <color name="colorSecondary">#BCAAA4</color>
+    <color name="colorPrimary">#FF5252</color>
+    <color name="colorPrimaryDark">#D32F2F</color>
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorSecondary">#FF8A80</color>
+    <color name="colorSecondaryAccent">#8D6E63</color>
     <color name="colorLightPrimary">#F8F8F8</color>
+    <color name="colorText">#000000</color>
     <color name="colorButton">#FFFFFF</color>
+    <color name="colorHint">#BDBDBD</color>
+    <color name="colorBorder">#808080</color>
     <color name="colorOverlay">#80000000</color>
     <color name="colorWhiteOverlay">#AAFFFFFF</color>
     <color name="half_black">#808080</color>
     <color name="white">#fafafa</color>
     <color name="white_pressed">#f1f1f1</color>
     <color name="black_semi_transparent">#B2000000</color>
+    <color name="colorCrossout">#00FF00</color>
+    <color name="colorDelete">#FF0000</color>
 </resources>
