--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,7 @@
     <dimen name="fragment_idea_review_list_height">200dp</dimen>
     <dimen name="fragment_idea_preview_idea_selector_height">100dp</dimen>
     <dimen name="fragment_idea_preview_idea_selector_width">100dp</dimen>
-    <dimen name="border_width">5dp</dimen>
+    <dimen name="border_width_thin">1dip</dimen>
+    <dimen name="border_radius">4dip</dimen>
+    <dimen name="border_width">5dip</dimen>
 </resources>
