--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -3,17 +3,27 @@
 
     <data>
 
-        <variable name="pos" type="int" />
+        <variable
+            name="pos"
+            type="int" />
 
-        <variable name="viewModel" type="com.doublesp.coherence.viewmodels.Idea" />
+        <variable
+            name="viewModel"
+            type="com.doublesp.coherence.viewmodels.Idea" />
     </data>
 
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView android:id="@+id/tvIdea" android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tvIdea"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/activity_list_composition_idea_height"
-            android:gravity="center" android:maxLines="1" android:text='@{viewModel.content}'
+            android:gravity="center"
+            android:maxLines="1"
+            android:text='@{viewModel.content}'
             android:textColor="@color/colorPrimary" />
     </LinearLayout>
 </layout>
