--- a/app/src/main/res/layout/item_idea_suggestions.xml
+++ b/app/src/main/res/layout/item_idea_suggestions.xml
@@ -3,21 +3,32 @@
 
     <data>
 
-        <variable name="pos" type="int" />
+        <variable
+            name="pos"
+            type="int" />
 
-        <variable name="handler"
+        <variable
+            name="handler"
             type="com.doublesp.coherence.interfaces.presentation.ListFragmentActionHandlerInterface" />
 
-        <variable name="viewModel" type="com.doublesp.coherence.viewmodels.Idea" />
+        <variable
+            name="viewModel"
+            type="com.doublesp.coherence.viewmodels.Idea" />
     </data>
 
-    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView android:id="@+id/tvIdeaSuggestion" android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tvIdeaSuggestion"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/activity_list_composition_idea_height"
-            android:gravity="center" android:maxLines="1"
+            android:gravity="center"
+            android:maxLines="1"
             android:onClick="@{() -> handler.onSuggestionClick(pos)}"
-            android:text='@{viewModel.content}' android:textColor="@color/colorSecondary" />
+            android:text='@{viewModel.content}'
+            android:textColor="@color/colorSecondary" />
 
     </FrameLayout>
 </layout>
