--- a/app/src/main/res/layout/single_detail_list_item.xml
+++ b/app/src/main/res/layout/single_detail_list_item.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView android:id="@+id/shopping_item" android:layout_width="0dp"
-        android:layout_height="100dp" android:layout_gravity="center|center_horizontal"
-        android:layout_weight="0.50" android:gravity="center" android:textSize="20sp"
+    <TextView
+        android:id="@+id/shopping_item"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center|center_horizontal"
+        android:layout_weight="0.50"
+        android:gravity="center"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
-    <ImageView android:id="@+id/shopping_item_image" android:layout_width="100dp"
+    <ImageView
+        android:id="@+id/shopping_item_image"
+        android:layout_width="100dp"
         android:layout_height="100dp" />
 </LinearLayout>
