--- a/app/src/main/res/layout/fragment_list_composition.xml
+++ b/app/src/main/res/layout/fragment_list_composition.xml
@@ -49,9 +49,8 @@
                 app:fabSize="normal"
                 app:layout_anchor="@id/rvIdeas"
                 app:layout_anchorGravity="bottom|right|end"
-                app:fab_addButtonColorNormal="@color/white"
-                app:fab_addButtonColorPressed="@color/white_pressed"
-                app:fab_addButtonPlusIconColor="@color/half_black"
+                app:fab_addButtonColorNormal="@color/colorAccent"
+                app:fab_addButtonColorPressed="@color/colorAccent"
                 app:fab_labelStyle="@style/menu_labels_style">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
@@ -62,16 +61,6 @@
                     android:tint="@color/colorButton"
                     app:fab_colorNormal="@color/colorAccent"
                     app:fab_title="@string/share_list"
-                    />
-
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="@{() -> handler.onSaveButtonClick()}"
-                    android:src="@drawable/ic_bookmark"
-                    android:tint="@color/colorButton"
-                    app:fab_colorNormal="@color/colorAccent"
-                    app:fab_title="@string/save_list"
                     />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
