--- a/app/src/main/res/layout/fragment_goal_search.xml
+++ b/app/src/main/res/layout/fragment_goal_search.xml
@@ -28,7 +28,19 @@
                 android:gravity="center"
                 android:hint="@string/idea_hint_search"
                 android:maxLines="1"
-                android:textColor="@color/colorPrimary"/>
+                style="@style/SearchBox"/>
+
+        <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right|end"
+                android:layout_margin="16dp"
+                android:onClick="onBookmarkClick"
+                android:src="@drawable/ic_bookmark"
+                android:tint="@color/colorButton"
+                app:fabSize="normal"
+                app:layout_anchor="@id/rvIdeaSearchResults"
+                app:layout_anchorGravity="bottom|right|end"/>
 
     </FrameLayout>
 </layout>
