--- a/app/src/main/res/layout/item_goal.xml
+++ b/app/src/main/res/layout/item_goal.xml
@@ -18,13 +18,14 @@
     </data>
 
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+                 android:layout_margin="16dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
 
         <ImageButton
                 android:id="@+id/ivGoalImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/item_goal_height"
                 android:adjustViewBounds="true"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
@@ -56,8 +57,8 @@
                 android:layout_gravity="bottom"
                 android:maxLines="1"
                 android:text='@{viewModel.title}'
-                android:textColor="@color/colorPrimary"
                 android:background="@color/colorWhiteOverlay"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 tools:text="Perperoni Pizza"
                 />
     </FrameLayout>
