--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -35,6 +35,7 @@
                 android:text='@{viewModel.content}'
                 android:textColor="@color/colorText"
                 app:crossout='@{viewModel.crossedOut}'
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 />
 
         <ImageButton
