--- a/app/src/main/res/layout/single_plan.xml
+++ b/app/src/main/res/layout/single_plan.xml
@@ -1,13 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:orientation="vertical" android:paddingTop="@dimen/activity_horizontal_margin">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView android:id="@+id/single_plan" android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:paddingBottom="5dp" android:textSize="25sp"
-        android:textStyle="bold" />
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+                  android:orientation="horizontal"
+                  android:layout_margin="16dp"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
 
-    <TextView android:id="@+id/owner" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <ImageView
+                android:id="@+id/ivPlanImage"
+                android:layout_width="@dimen/item_idea_image_width"
+                android:layout_height="@dimen/item_idea_image_height"
+                android:adjustViewBounds="true"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/background_3"
+                />
 
-</LinearLayout>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/activity_horizontal_margin"
+                >
+
+            <TextView
+                    android:id="@+id/single_plan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    tools:text="Grocery List"/>
+
+            <TextView
+                    android:id="@+id/owner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="11dp"
+                    android:paddingStart="11dp"
+                    android:paddingRight="11dp"
+                    android:paddingEnd="11dp"
+                    tools:text="pinyaoting"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+</layout>
