--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -3,5 +3,5 @@
     <solid android:color="@color/colorButton" />
     <stroke
             android:width="@dimen/border_width"
-            android:color="@color/colorSecondaryAccent" />
+            android:color="@color/colorPrimaryDark" />
 </shape>
