--- a/app/src/main/res/drawable-anydpi/ic_card_background.xml
+++ b/app/src/main/res/drawable-anydpi/ic_card_background.xml
@@ -1,5 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/transparent" />
-    <stroke android:width="@dimen/border_width_thin" android:color="@color/colorBorder" />
-    <corners android:radius="@dimen/border_radius"/>
+    <stroke
+        android:width="@dimen/border_width_thin"
+        android:color="@color/colorBorder" />
+    <corners android:radius="@dimen/border_radius" />
 </shape>
