--- a/app/src/main/res/layout/fragment_goal_preview.xml
+++ b/app/src/main/res/layout/fragment_goal_preview.xml
@@ -45,15 +45,21 @@
                 android:textColor="@color/colorButton"
                 tools:text="Grilled Deviled Chickens" />
 
-            <TextView
-                android:id="@+id/tvOverview"
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:ellipsize="end"
-                android:text='@{viewModel.description}'
-                android:textColor="@color/colorButton"
-                tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
+                android:fillViewport="true"
+                android:scrollbars="vertical">
+
+                <TextView
+                    android:id="@+id/tvOverview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:ellipsize="end"
+                    android:text='@{viewModel.description}'
+                    android:textColor="@color/colorButton"
+                    tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
 3 lemons, plus wedges for garnish
 4 cloves garlic, peeled and smashed
 1 tablespoon crushed red-pepper flakes, or to taste
@@ -61,6 +67,7 @@
 1 tablespoon finely chopped fresh rosemary
 1/2 cup olive oil
 Salt, to taste" />
+            </ScrollView>
 
         </LinearLayout>
 
