--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="config_animation_duration_long">500</integer>
+    <integer name="app_title_size">36</integer>
+    <integer name="toolbar_title_size">16</integer>
 </resources>
