--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/activity_home"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.doublesp.coherence.activities.MainActivity">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
+    <android.support.design.widget.CoordinatorLayout
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/timeline_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/tabs"
-            android:background="@android:color/transparent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            tools:context="com.doublesp.coherence.activities.MainActivity">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/colorPrimary"
-            app:tabIndicatorColor="@color/colorIndicator"
-            app:tabMode="fixed" />
+        <RelativeLayout
+                android:id="@+id/activity_home"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    </RelativeLayout>
+            <android.support.v4.view.ViewPager
+                    android:id="@+id/viewpager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_above="@+id/tabs"
+                    android:background="@android:color/transparent"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+            <android.support.design.widget.TabLayout
+                    android:id="@+id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/colorTabLayout"
+                    app:tabTextColor="@color/colorButtonUnselected"
+                    app:tabSelectedTextColor="@color/colorText"
+                    app:tabIndicatorColor="@color/colorIndicator"
+                    app:tabMode="fixed"/>
+
+        </RelativeLayout>
+
+        <include
+                layout="@layout/toolbar_main"
+                android:id="@+id/activity_main_toolbar_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                />
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
