--- a/app/src/main/res/layout/fragment_list_composition.xml
+++ b/app/src/main/res/layout/fragment_list_composition.xml
@@ -17,25 +17,16 @@
             android:id="@+id/ivIdeaCompositionBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:alpha="0.1"
             android:scaleType="centerCrop"
-            tools:src="@drawable/background_0" />
+            android:src="@drawable/background_0" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvIdeas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingTop="84dp"
+            android:clipToPadding="false"
             android:background="@android:color/transparent" />
-
-        <EditText
-            android:id="@+id/etIdea"
-            style="@style/SearchBox"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_list_composition_idea_height"
-            android:layout_gravity="bottom"
-            android:gravity="center"
-            android:hint="@string/idea_hint_create"
-            android:maxLines="1" />
 
         <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:id="@+id/multiple_actions"
@@ -44,8 +35,8 @@
             android:layout_gravity="bottom|right|end"
             android:layout_margin="16dp"
             app:fabSize="normal"
-            app:fab_addButtonColorNormal="@color/colorAccent"
-            app:fab_addButtonColorPressed="@color/colorAccent"
+            app:fab_addButtonColorNormal="@color/colorUpOverlayDark"
+            app:fab_addButtonColorPressed="@color/colorUpOverlayDark"
             app:fab_labelStyle="@style/menu_labels_style"
             app:layout_anchor="@id/rvIdeas"
             app:layout_anchorGravity="bottom|right|end">
@@ -56,7 +47,7 @@
                 android:onClick="@{() -> handler.onShareButtonClick()}"
                 android:src="@drawable/ic_share"
                 android:tint="@color/colorButton"
-                app:fab_colorNormal="@color/colorAccent"
+                app:fab_colorNormal="@color/colorDownOverlayDark"
                 app:fab_title="@string/share_list" />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
@@ -65,7 +56,7 @@
                 android:onClick="@{() -> handler.onSearchButtonClick()}"
                 android:src="@drawable/ic_search"
                 android:tint="@color/colorButton"
-                app:fab_colorNormal="@color/colorAccent"
+                app:fab_colorNormal="@color/colorRightOverlayDark"
                 app:fab_title="@string/search_goal" />
 
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
