--- a/app/src/main/res/layout/item_goal.xml
+++ b/app/src/main/res/layout/item_goal.xml
@@ -1,62 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="pos"
-            type="int" />
+                name="pos"
+                type="int"/>
 
         <variable
-            name="handler"
-            type="com.doublesp.coherence.interfaces.presentation.GoalActionHandlerInterface" />
+                name="handler"
+                type="com.doublesp.coherence.interfaces.presentation.GoalActionHandlerInterface"/>
 
         <variable
-            name="viewModel"
-            type="com.doublesp.coherence.viewmodels.Goal" />
+                name="viewModel"
+                type="com.doublesp.coherence.viewmodels.Goal"/>
     </data>
 
-    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
 
-        <ImageButton
-            android:id="@+id/ivGoalImage"
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/item_goal_height"
-            android:adjustViewBounds="true"
-            android:onClick="@{() -> handler.onPreviewButtonClick(pos)}"
-            android:padding="0dp"
-            android:scaleType="centerCrop"
-            app:imageUrl='@{viewModel.imageUrl}'
-            tools:src="@drawable/background_3" />
-
-        <ImageButton
-            android:id="@+id/ibGoalSelect"
-            android:layout_width="@dimen/activity_list_composition_idea_icon_width"
-            android:layout_height="@dimen/activity_list_composition_idea_icon_height"
-            android:layout_gravity="top|right|end"
-            android:layout_marginEnd="@dimen/activity_list_composition_idea_icon_margin_right"
-            android:layout_marginRight="@dimen/activity_list_composition_idea_icon_margin_right"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:onClick="@{() -> handler.onBookmarkClick(pos)}"
-            android:scaleType="centerCrop"
-            android:src="@drawable/bookmark"
-            android:tint="@color/colorAccent"
-            app:selected='@{viewModel.bookmarked}' />
+            tools:background="@color/colorBackground">
 
         <TextView
-            android:id="@+id/tvGoalTitle"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/activity_list_composition_idea_height"
-            android:layout_gravity="bottom"
-            android:background="@color/colorWhiteOverlay"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text='@{viewModel.title}'
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            tools:text="Perperoni Pizza" />
-    </FrameLayout>
+                android:id="@+id/tvGoalIndex"
+                android:layout_width="@dimen/activity_list_composition_idea_icon_width"
+                android:layout_height="@dimen/activity_list_composition_idea_icon_height"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text='@{Integer.toString(pos+1)}'
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:background="@drawable/ic_panorama_fish_eye"
+                android:backgroundTint="@color/colorText"
+                android:textColor="@color/colorText"
+                tools:text="1"/>
+
+        <ImageButton
+                android:id="@+id/ivGoalImage"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/item_goal_height"
+                android:adjustViewBounds="true"
+                android:onClick="@{() -> handler.onPreviewButtonClick(pos)}"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/background_3"/>
+
+        <Button
+                android:id="@+id/tvGoalTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:padding="20dp"
+                android:maxLines="2"
+                android:text='@{viewModel.title}'
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:background="@android:color/transparent"
+                android:textColor="@color/colorText"
+                android:onClick="@{() -> handler.onPreviewButtonClick(pos)}"
+                tools:text="Perperoni Pizza"
+                />
+
+    </LinearLayout>
+
+
 </layout>
